# django-simple-file-handler

./: .gitignore  LICENSE  MANIFEST.in  README.rst  setup.cfg  setup.py
django_simple_file_handler/: __init__.py  apps.py  dictionaries.py  file_types.py  functions.py  models.py  runtests.py  urls.py  validators.py
django_simple_file_handler.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
django_simple_file_handler/migrations/: 0001_initial.py  0002_auto_20180521_1545.py  0003_auto_20180525_1035.py  0004_auto_20181005_1601.py  0005_auto_20190124_1658.py  0006_auto_20190429_1949.py  0007_auto_20210514_1405.py  0008_auto_20210702_1604.py
django_simple_file_handler/signals/: handlers.py
django_simple_file_handler/tests/: functions.py  settings.py  test_functions.py  test_models.py  test_settings.py  test_views.py
