[metadata]
name = django_simple_file_handler
version = 0.3.1
author = Jonathan Rickard
author_email = jonathan@jonathanrickard.com
license = MIT License
description = A Django app for storing and processing documents and images
keywords = django, files, images
url = https://github.com/jonathanrickard/django-simple-file-handler
long_description = file: README.rst
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Developers
    Topic :: Internet :: WWW/HTTP
    License :: OSI Approved :: MIT License

[options]
packages = find:
include_package_data = True
zip_safe = True
install_requires =
    Django >= 3.2, < 4.0
    Pillow >= 8.3.0
    xhtml2pdf >= 0.2.5
